<resources>
    <string name="app_name">OnlineStore</string>


    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="editText_hint_email_id">Email ID</string>
    <string name="editText_hint_password">Password</string>
    <string name="editText_hint_confirm_password">Confirm password</string>
    <string name="label_forgot_password">Forgot password?</string>
    <string name="button_label_login">Login</string>
    <string name="button_label_register">Registration</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>


    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>

    <string name="i_agree_to_the_terms_and_condition">I agree to the <u>Terms and condition</u></string>
    <string name="register"><u>Register</u></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>

    <string name="err_msg_enter_first_name">Please enter first name</string>
    <string name="err_msg_enter_last_name">Please enter last name</string>
    <string name="err_msg_enter_email">Please enter email</string>
    <string name="err_msg_enter_password">Please enter password</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password mismatch</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition</string>
    <string name="register_successful">Your details are valid</string>

    <string name="please_wait">Please wait&#8230;</string>
    <string name="details_valid">Your detail are valid</string>
    <string name="login_successful">You are logged in successfully</string>

    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Enter your username and email address we\'ll send you an email to reset your password</string>
    <string name="button_label_submit">Submit</string>

    <string name="email_sent_success">Email sent successfully to reset your password</string>

    <string name="title_complete_profile">COMPLETE PROFILE</string>
    <string name="editText_hint_mobile_number"> Mobile number</string>
    <string name="radioButton_label_male">MALE</string>
    <string name="radioButton_label_female">FEMALE</string>
    <string name="button_label_save">Save</string>
    <string name="read_storage_permission_denied">Read storage permission denied</string>
    <string name="image_selection_failed">Image selection failed</string>
    <string name="err_msg_enter_mobile_number">Please enter mobile number</string>
    <string name="msg_profile_updating_success">Your profile is updating successfully</string>

    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_products">Products</string>
    <string name="title_orders">Orders</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit</string>
    <string name="action_settings">Settings</string>
    <string name="title_settings">Settings</string>
    <string name="label_edit">Edit</string>
    <string name="label_addresses">Addresses</string>
    <string name="label_button_logout">Logout</string>
    <string name="title_edit_profile">EDIT PROFILE</string>


</resources>