<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.ForgotPasswordActivity">


    <FrameLayout
        android:id="@+id/frame_layout_header_image"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/auth_header_image_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_description"
            android:scaleType="fitXY"
            android:src="@drawable/auth_screen_background" />

        <ImageView
            android:layout_width="@dimen/auth_logo_width_size"
            android:layout_height="@dimen/auth_logo_height_size"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/logo"
            app:tint="@color/white" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar_forgot_password_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="top" />


    </FrameLayout>

    <com.example.onlinestore.utils.OSTextViewBold
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/title_forgot_password"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/forgot_password_title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_layout_header_image" />

    <com.example.onlinestore.utils.OSTextView
        android:id="@+id/textView_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/forgot_password_title_description"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/forgot_password_title_description_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText_hint_email_id"
        android:paddingStart="16dp"
        android:paddingTop="20dp"
        android:paddingEnd="16dp"
        android:textColorHint="@color/colorSecondaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_description">

        <com.example.onlinestore.utils.OSEditText
            android:id="@+id/editText_email_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/editText_textSize" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.example.onlinestore.utils.OSButton
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_background"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="@dimen/button_paddingTop_bottom"
        android:paddingBottom="@dimen/button_paddingTop_bottom"
        android:text="@string/button_label_submit"
        android:textColor="@color/white"
        android:textSize="@dimen/button_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email" />
</androidx.constraintlayout.widget.ConstraintLayout>