<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.RegisterActivity"
    tools:ignore="MissingDefaultResource">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_register_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.example.onlinestore.utils.OSTextViewBold
            android:id="@+id/textView_title_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_padding_start"
            android:paddingEnd="0dp"
            android:text="@string/create_an_account"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/toolbar_title_textSize" />
    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_register_activity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_firstName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_first_name"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.example.onlinestore.utils.OSEditText
                    android:id="@+id/editText_firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="@dimen/editText_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/editText_textSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_lastName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/hint_last_name"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_firstName">


                <com.example.onlinestore.utils.OSEditText
                    android:id="@+id/editText_lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:padding="@dimen/editText_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/editText_textSize" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_email_reg"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/editText_hint_email_id"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_lastName">


                <com.example.onlinestore.utils.OSEditText
                    android:id="@+id/editText_email_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/editText_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/editText_textSize" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_password_reg"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/editText_hint_password"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_email_reg">


                <com.example.onlinestore.utils.OSEditText
                    android:id="@+id/editText_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:padding="@dimen/editText_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/editText_textSize" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_confirm_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/editText_hint_confirm_password"
                android:textColorHint="@color/colorSecondaryText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_password_reg">


                <com.example.onlinestore.utils.OSEditText
                    android:id="@+id/editText_confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:padding="@dimen/editText_padding"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/editText_textSize" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:id="@+id/linearLayout_terms_and_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_confirm_password">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkBox_terms_and_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false" />

                <com.example.onlinestore.utils.OSTextView
                    android:id="@+id/textView_terms_and_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/txt_terms_condition_marginStart"
                    android:text="@string/i_agree_to_the_terms_and_condition"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/txt_terms_and_condition_textSize" />
            </LinearLayout>

            <com.example.onlinestore.utils.OSButton
                android:id="@+id/button_registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_background"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/button_padding"
                android:paddingBottom="@dimen/button_padding"
                android:text="@string/button_label_register"
                android:textColor="@color/white"
                android:textSize="@dimen/button_textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout_terms_and_condition" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_registration">


                <com.example.onlinestore.utils.OSTextView
                    android:id="@+id/textView_already_have_an_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/clickable_text_view_padding"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/label_textView_textSize" />

                <com.example.onlinestore.utils.OSTextViewBold
                    android:id="@+id/textView_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="@dimen/clickable_text_view_padding"
                    android:text="@string/login"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/label_textView_textSize" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>